# panen-pintar

./: README.md  edgeone.json  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml
scripts/: stress_test.py
src/: main.py
src/app/: __init__.py  bootstrap.py  data.py  shell.py  store.py  theme.py  ui.py
src/app/views/: analysis.py  dashboard.py  form.py  history.py  onboarding.py  plan.py
